syntax = "proto3";

package api.resources.stats.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/koor-tech/data-control-center/gen/go/api/resources/stats;stats";

enum ClusterHealth {
  CLUSTER_HEALTH_UNSPECIFIED = 0;
  CLUSTER_HEALTH_OFFLINE = 1;
  CLUSTER_HEALTH_OK = 2;
  CLUSTER_HEALTH_WARN = 3;
  CLUSTER_HEALTH_ERR = 4;
}

message MonService {
  int32 daemon_count = 1;
  string quorum = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message MgrService {
  string active = 1;
  repeated string standbys = 2;
  google.protobuf.Timestamp updated_at = 4;
}

message MdsService {
  int32 daemons_up = 1;
  int32 hot_standby_count = 2;
}

message OsdService {
  int32 osd_count = 1;
  int32 osd_up = 2;
  int32 osd_in = 3;
  google.protobuf.Timestamp osd_up_updated_at = 4;
  google.protobuf.Timestamp osd_in_updated_at = 5;
}

message RgwService {
  int32 active_daemon = 1;
  int32 host_count = 2;
  int32 zone_count = 3;
}

message Services {
  MonService mon = 1;
  MgrService mgr = 2;
  MdsService mds = 3;
  OsdService osd = 4;
  RgwService rgw = 5;
}

message PGs {
  int32 active_clean = 1;
}

message Pools {
  int32 pools = 1;
  PGs pgs = 2;
}

message Objects {
  int32 object_count = 1;
  string size = 2;
}

message Usage {
  int64 used = 1;
  int64 available = 2;
  int64 total = 3;
}

message Data {
  int32 volumes = 1;
  Pools pools = 2;
  Objects objects = 3;
  Usage usage = 4;
}

message IOPS {
  string client_read = 1;
  string client_write = 2;
  string client_read_ops = 3;
  string client_write_ops = 4;
}

message Crash {
  string description = 1;
}

message ClusterStats {
  string id = 1;
  ClusterHealth status = 2;
  repeated Crash crashes = 3;
  Services services = 4;
  Data data = 5;
  string test = 6;
  IOPS iops = 7;
}

message ResourceInfo {
  string apiversion = 1;
  string kind = 2;
  string namespace = 3;
  string name = 4;
  ResourceStatus status = 5;
  int32 replicas = 6;
  ReliabilityScore reliability = 7;
}

enum ResourceStatus {
  RESOURCE_STATUS_UNSPECIFIED = 0;
  RESOURCE_STATUS_UNKNOWN = 1;
  RESOURCE_STATUS_READY = 2;
  RESOURCE_STATUS_PROGRESSING = 3;
  RESOURCE_STATUS_NOT_READY = 4;
}

message NodeInfo {
  string name = 1;
  ResourceStatus status = 2;
  repeated string roles = 3;
  optional string internal_ip = 4;
  optional string external_ip = 5;
  optional google.protobuf.Timestamp age = 6;
}

message ClusterRadar {
  float cluster_health = 1;
  float nodes_health = 2;
  float capacity_available = 3;
  float stability = 4;
  float reliability = 5;
}

enum ReliabilityScore {
  RELIABILITY_SCORE_UNSPECIFIED = 0;
  RELIABILITY_SCORE_UNKNOWN = 1;
  RELIABILITY_SCORE_NONE = 2;
  RELIABILITY_SCORE_DEGRADED = 3;
  RELIABILITY_SCORE_OK = 4;
}
